2001-11-28  Ian MacPhedran <Ian_MacPhedran@engr.USask.CA>

	* output-fig.c (out_fig_splines): introduce new local variable,
	fig_subt. That fix a bug reported by Dan Mills
	<dmills@spamblock.demon.co.uk>.

	"Testing 0.28 pre 1,
	 when exporting as .fig files, all lines are saved as closed curves,
	 thus the letter S turns into 8 due to the curve closing.
	 Does anyone have a copy of the spec. for .fig files so I can fix this?"

2001-11-27  Martin Weber <martweb@gmx.net>

	* main.c (read_command_line): output format list now freed.

	(Message-ID: <3C02B6D3.7FBF5057@gmx.net>).
	
2001-11-25  Martin Weber <martweb@gmx.net>

	* output-p2e.c (output_p2e_header, output_p2e_writer): 
	Output that is totally curve free has to be marked.

	(Message-ID: <3C012785.19621140@gmx.net>).
	
2001-11-25  Martin Weber <martweb@gmx.net>

	* output-dxf.c (out_splines): Removed code that was needed due to 
	an old bug in AutoTrace.

	* output-epd.c (out_splines): Removed wrong comment.

	* output-pdf.c (output_pdf_tailor): Removed unnecessary xref part.

	* output.h (output_shortlist): New declaration.

	* output.c (output_shortlist): New function.

	* main.c (read_command_line): Invoke output_shortlist.
	(USAGE): Remove OUTPUT_SUFFIX_LIST.
	(main.c, output.c, output.h: Dynamic generation of output format list.)

	* autotrace.dsp: output-pdf.c and output-pdf.h are added.

	(Message-ID: <3C0112EA.EB49E12A@gmx.net>).
	
2001-11-25  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Added output-pdf.[hc].

2001-11-24  Martin Weber <martweb@gmx.net>

	* output-pdf.[ch]: New files.
	
        * output.h (OUTPUT_SUFFIX_LIST): Added pdf.
	
        * NEWS: Upadted.

	* output.c: Added output_pdf_writer.
	
	* despeckle.c (despeckle): Use FATAL1
	instead of WARNING1.

	* autotrace.dsp: Updated.

	* autotrace.c(at_splines_new_full): Validated
	opts->despeckle_level that is passed to despeckle.

	Message-ID: <3BFF770F.E7B644F3@gmx.net>,
	Message-ID: <3BFECAB0.A3FFDC52@gmx.net>.
